Trying to make line break better, trying to add cc license, trying to fix scrollbar.

--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,15 @@ body {
   font-family: "Lato", "Calibri", sans-serif;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  color: #1b1b1b;
-  background-color: #e9dece;
+  overflow: auto;
+  color: var(--off_black);
+  background-color: var(--off_white);
 }
 
 .invert_theme {
   overflow: auto;
-  color: #e9dece;
-  background-color: #1b1b1b;
+  color: var(--off_white);
+  background-color: var(--off_black);
 }
 
 header h1 {
@@ -24,22 +24,77 @@ header h1 {
   text-align: center;
 }
 
-.flex-container {
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 70vh;
+  min-height: 100vh;
+  max-width: 100%;
+  margin: auto;
+}
+
+.page_header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.page_header h1 {
+  font-family: Merriweather, Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 5rem;
+  margin: 0;
+  position: relative;
+}
+
+.page-body {
+  display: flex;
+  flex-grow: .98;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.page-footer {
+  text-align: center;
+  opacity: .6;
 }
 
 ::-moz-selection { /* Code for Firefox */
-  color: #1b1b1b;
-  background: #fc9797;
+  color: var(--off_black);
+  background: var(--lighter_red);
 }
 
 ::selection {
-  color: #1b1b1b;
-  background: #fc9797;
+  color: var(--off_black);
+  background: var(--lighter_red);
+}
+
+/* Custom scroll bar */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--off_black); /* Background of the scroll bar track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--light_red);
+  border-radius: 6px;
+  border: 4px solid var(--off_black); /* Adds space between thumb and track */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--lighter_red); /* Change color on hover */
+}
+
+/* For Firefox */
+body {
+  scrollbar-width: thin; /* Thin scroll bar */
+  scrollbar-color: var(--light_red) var(--off_white); /* Thumb and track colors */
 }
 
 @media (max-height : 700px) {
