--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --off_black: #1b1b1b;
+  --off_white: #e9dece;
+  --dark_red: #9a0000;
+  --light_red: #fc7575;
+  --lighter_red: #fc9797;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
